# 8V42_Bogomolov_THI_lab4

./: .gitignore  CMakeLists.txt
NewYearGiftApp/: ConsoleUI.cpp  ConsoleUI.h  main.cpp
NewYearGiftLib/: AbstractSweet.cpp  AbstractSweet.h  Candy.cpp  Candy.h  CaramelCandy.cpp  CaramelCandy.h  CaramelCandyFactory.h  ChocolateCandy.h  ChocolateCandyFactory.h  ConsoleLogger.h  ConsoleLoggerFactory.h  Export.h  FileLogger.h  FileLoggerFactory.cpp  FileLoggerFactory.h  GiftService.h  Ilogger.h  LoggerFactory.h  Lollipop.h  LollipopFactory.h  Marshmallow.h  MarshmallowFactory.h  NewYearGift.cpp  NewYearGift.h  SweetFactory.h
NewYearGiftLib/include/: AbstractSweet.h  Candy.h  CaramelCandy.h  CaramelCandyFactory.h  ChocolateCandy.h  ChocolateCandyFactory.h  ConsoleLogger.h  ConsoleLoggerFactory.h  FileLogger.h  FileLoggerFactory.h  GiftService.h  Ilogger.h  LoggerFactory.h  Lollipop.h  LollipopFactory.h  Marshmallow.h  MarshmallowFactory.h  NewYearGift.h  SweetFactory.h
NewYearGiftLib/src/: CaramelCandyFactory.cpp  ChocolateCandy.cpp  ChocolateCandyFactory.cpp  ConsoleLogger.cpp  ConsoleLoggerFactory.cpp  FileLogger.cpp  GiftService.cpp  Lollipop.cpp  LollipopFactory.cpp  Marshmallow.cpp  MarshmallowFactory.cpp
